feat: added additional config vars for File Renaming and Sample/Proof Filtering
