# docs/static/swagger.json
@@ -6900,6 +6900,12 @@
                 "expand_bluray_iso": {
                     "type": "boolean"
                 },
+                "allow_file_renaming": {
+                    "type": "boolean"
+                },
+                "filter_sample_and_proof": {
+                    "type": "boolean"
+                },
                 "import_dir": {
                     "type": "string"
                 },
